[metadata]
name = lwn2pocket
version = 1
summary = Send LWN articles to Pocket
author = Julien Danjou
author-email = julien@danjou.info
home-page = https://github.com/jd/lwn2pocket
classifier =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
scripts = lwn2pocket.py
